--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py makemigrations && \
+             python manage.py migrate && \
+             python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
