--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - POSTGRES_DB=blog_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+  redis:
+    image: "redis:alpine"
   app:
     build:
       context: .
@@ -20,3 +22,21 @@ services:
              python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
+  celery:
+    build:
+      context: .
+    command: celery -A app worker -l info
+    volumes:
+      - ./app:/app
+    depends_on:
+      - db
+      - redis
+  celery-beat:
+    build:
+      context: .
+    command: celery -A app beat -l info
+    volumes:
+      - ./app:/app
+    depends_on:
+      - db
+      - redis
